# amoca-frontier-2026-solana-dapp

./: Anchor.toml  Cargo.toml  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
programs/tangram-invoice/: Cargo.toml
programs/tangram-invoice/src/: lib.rs
src/: index.css  main.tsx
src/components/: CurrencyAmount.tsx  InvoiceCard.tsx  InvoiceStatusBadge.tsx  Nav.tsx  SolanaSignAndSendTransactionFeaturePanel.tsx  SustainabilityScore.tsx  WalletGuard.tsx
src/context/: RoleContext.tsx
src/hooks/: useInvoices.ts  useMintInvoiceNFT.ts  useTangramProgram.ts
src/programs/: constants.ts  types.ts
src/routes/: buyer.tsx  exporter.tsx  financier.tsx  invoice.tsx  marketplace.tsx  root.tsx  verifier.tsx
