[package]
name = "tangram-invoice"
version = "0.1.0"
description = "Tangram Green — Invoice tokenization program for agricultural trade finance on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tangram_invoice"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token", "associated_token"] }
